add folder, move files

--- a/published/Browsers Layout engines.html
+++ b/published/Browsers Layout engines.html
@@ -2,7 +2,8 @@ Browsers Layout engines
 
 The list of popular layout engines (the full list you may find in the end of the article):
 
-http://upload.wikimedia.org/wikipedia/commons/6/67/File-Chromium-Linux-Alpha.png
+browsers-engine.jpg
+
 
 <ul>
     <li><code>Gecko</code> is developed by the <code>Mozilla Foundation</code>.</li>
