--- a/__todo/firebase&angularFire.html
+++ b/__todo/firebase&angularFire.html
@@ -1,19 +1,18 @@
 <div class="wp-center">
-<img src="../source/images/..." alt="" width="500px"/>
+<img src="../source/images/Firebase&AngularJS/AngularFire.jpg" alt="" width="500px"/>
 </div>
 
 <ul style="list-style: none;">
-    <li><a class="link-icon" href="/promises-in-javascript/#Promises libraries and native Javascript promise object"></a>Promises libraries and native Javascript promise object</li>
-    <li><a class="link-icon" href="/promises-in-javascript/#Browser support and polyfill"></a>Browser support and polyfill</li>
-    <li><a class="link-icon" href="/promises-in-javascript/#Promisifying XMLHttpRequest"></a>Promisifying XMLHttpRequest</li>
-    <li><a class="link-icon" href="/promises-in-javascript/#Promise chaining"></a>Promise chaining</li>
-    <li><a class="link-icon" href="/promises-in-javascript/#Error handling"></a>Error handling</li>
+    <li><a class="link-icon" href="/promises-in-javascript/#Who, Why and WHAT?"></a>Who, Why and WHAT?</li>
+    <li><a class="link-icon" href="/promises-in-javascript/#Quick start"></a>Quick start</li>
+    <li><a class="link-icon" href="/promises-in-javascript/#Synchronize data with $asObject(). Thee way data-binding."></a>Synchronize data with $asObject(). Thee way data-binding.</li>
+    <li><a class="link-icon" href="/promises-in-javascript/#Synchronize Arrays with $asArray()"></a>Synchronize Arrays with $asArray()</li>
 </ul>
 <!--more-->
 
-<a href name="Why, Who and WHAT?"></a>
+<a href name="Who, Why and WHAT?"></a>
 <div class="title-block">
-    <i class="attention"></i>Why, Who and WHAT?
+    <i class="attention"></i>Who, Why and WHAT?
 </div>
 
 
