--- a/published/fullPage.html
+++ b/published/fullPage.html
@@ -1,6 +1,4 @@
-A simple and easy to use jQuery plugin to create full-screen scrolling page effects.
-
-http://jquery-plugins.net/image/plugin/fullpagejs-jquery-plugin-fullscreen-scrolling-websites.png
+A simple and easy to use jQuery plugin to create full-screen effects.
 
 Plugin is capable of:
 
