--- a/published/scrollMagic.html
+++ b/published/scrollMagic.html
@@ -1,6 +1,9 @@
 ScrollMagic is a jQuery plugin which lets you use the scroll bar like a playback control.
 
-http://www.samsung.com/it/premium/js/scrollmagic/img/demo_tophat.png
+<div class="wp-center">
+	<img src="../source/images/ScrollMagic/scrollMagic.png" alt="" width="500px">
+</div>
+
 
 The main possibilities of the plugin:
 
