finish arrow function

--- a/inprogress/Exploring ECMAScript2015/post.html
+++ b/inprogress/Exploring ECMAScript2015/post.html
@@ -14,12 +14,12 @@
 
 <!--more-->
 
-<a href name="TODO"></a>
+<a href name="arrow-function"></a>
 <div class="title-block">
     Arrow function
 </div>
 
-The "fat" arrow <code>=></code> (the opposet to the thin arrow <code>-></code>) was chosen to compatible with CoffeeScript style.
+The "fat" arrow <code>=></code> (the opposed to the thin arrow <code>-></code>) was chosen to compatible with CoffeeScript style.
 
 Specifying parameters:
 
@@ -132,9 +132,13 @@ class Prefixer {
 }
 [/javascript]
 
+IIFE as arrow functions:
 
-
-
+[javascript]
+(() => {
+    return 123;
+})();
+[/javascript]
 
 
 
