--- a/published/Web Services, WSDL, SOAP envelope with JavaScript/index.html
+++ b/published/Web Services, WSDL, SOAP envelope with JavaScript/index.html
@@ -189,17 +189,9 @@ var vRequestObj = $soap.createRequest('urn:Webservices' + 'PortalEmags', 'getEma
 
 <hr />
 
-Once I have obtained object with property which I need to use for create XML SOAP Request. It's time to use <code>$xml</code> helper with whole bunch of useful methods :
+Once I have obtained object with property which I need to use for create XML SOAP Request. It's time to use <code>$xml</code> helper with whole bunch of useful methods. The source on <a href="https://github.com/qetr1ck-op/blogs-article/blob/master/published/Web%20Services%2C%20WSDL%2C%20SOAP%20envelope%20with%20JavaScript/%24xml.js">github</a>.
 
-[javascript]
-
-[/javascript]
-
-Creating XHR object, 2 callbacks, and send request via POST. Parse XML into JSON object -> fetch response property -> get value:
-
-[javascript]
-
-[/javascript]
+Creating XHR object, 2 callbacks, and send request via POST. Parse XML into JSON object -> fetch response property -> get value on <a href="https://github.com/qetr1ck-op/blogs-article/blob/master/published/Web%20Services%2C%20WSDL%2C%20SOAP%20envelope%20with%20JavaScript/example.js">github</a>.
 
 And, finally response data in Chrome console:
 
