--- a/__todo/git-credential-store.html
+++ b/__todo/git-credential-store.html
@@ -1,2 +1,12 @@
-Git: helper to store credentials on disk
-http://git-scm.com/docs/git-credential-store
+Using this helper will store your passwords unencrypted on disk, protected only by filesystem permissions.
+
+[bash]
+git config credential.helper store
+git push http://example.com/repo.git
+Username: <type your username>
+Password: <type your password>
+
+[several days later]
+git push http://example.com/repo.git
+[your credentials are used automatically]
+[/bash]
