--- a/__todo/git-credential-store.html
+++ b/__todo/git-credential-store.html
@@ -10,3 +10,8 @@ Password: <type your password>
 git push http://example.com/repo.git
 [your credentials are used automatically]
 [/bash]
+
+Article which saves my day:
+<ul>
+    <li>on <a href="http://git-scm.com/docs/git-credential-store">official git</a></li>
+</ul>
