Fix anchor name

--- a/published/Fluid three column layout with positioning, floats, tables or flexbox/index.html
+++ b/published/Fluid three column layout with positioning, floats, tables or flexbox/index.html
@@ -33,7 +33,7 @@ To control position layout relative to the parent element layers, necessary esta
 <p data-height="1082" data-theme-id="0" data-slug-hash="jtyhi" data-default-tab="result" class='codepen'>See the Pen <a href='http://codepen.io/qetr1ck-op/pen/jtyhi/'>Three column fluid layout with positionig</a> by qetr1ck-op (<a href='http://codepen.io/qetr1ck-op'>@qetr1ck-op</a>) on <a href='http://codepen.io'>CodePen</a>.</p>
 <script async src="//codepen.io/assets/embed/ei.js"></script>
 
-<a href name="floating"></a>
+<a href name="floating elements"></a>
 <div class="title-block">
     Floats
 </div>
