Upd store git credential

--- a/published/GIT store credentials on disk/index.html
+++ b/published/GIT store credentials on disk/index.html
@@ -1,2 +1,9 @@
-Git: helper to store credentials on disk
-http://git-scm.com/docs/git-credential-store
+Using this helper will store your passwords unencrypted on disk, protected only by filesystem permissions.
+
+<script src="https://gist.github.com/qetr1ck-op/ca7809aa4a58e8a65a4b.js"></script>
+<!--more-->
+
+Article which saves my day:
+<ul>
+    <li>on <a href="http://git-scm.com/docs/git-credential-store">official git</a></li>
+</ul>
